* Scribble Tutorial now demonstrates the use of command line arguments
* Added the following set of gdi classes: CBitmap, CBrush, CFont, CPalette, 
   CPen and CRgn.
* Extended the CSize, CPoint and CRect classes   

Changes in detail
-----------------
- Added CBitmap
- Added CBrush
- Added CFont
- Added CPalette
- Added CPen
- Added CRgn
- Added CTaskDialog
- Added CResString (replaces CWnd::LoadString)
- Added tStringStream typedef (a TCHAR stringstream)
- Added	A2BSTR	
- Added	A2OLE	
- Added	A2T		
- Added	A2W		
- Added	OLE2A	
- Added	OLE2T	
- Added	OLE2W	
- Added	T2A		
- Added	T2BSTR	
- Added	T2OLE   
- Added	T2W		
- Added	W2A		
- Added	W2BSTR	
- Added	W2OLE	
- Added	W2T
- Added CFrame::ShowMenu		
- Added CDC::GetBitmapInfo
- Added CDC::GetBrushInfo
- Added CDC::GetFontInfo
- Added CDC::GetPenInfo
- Added CDialog::AttachItem
- Added CDockContainer::SetActiveContainer
- Added CDocker::Close
- Added CDocker::SetCaptionHeight
- Added CResizer::GetMaxRect
- Added CResizer::GetMinRect
- Added CResizer::HandleMessage
- Added CTab::SetFixedWidth
- Added CTab::SetOwnerDraw
- Added CWnd::BeginPaint
- Added CWnd::ClientToScreen
- Added CWnd::CheckRadioButton
- Added CWnd::DlgDirList
- Added CWnd::DlgDirListComboBox
- Added CWnd::DlgDirSelectEx
- Added CWnd::DlgDirSelectComboBoxEx
- Added CWnd::DrawAnimatedRects
- Added CWnd::DrawCaption
- Added CWnd::EndPaint
- Added CWnd::GetNextDlgGroupItem
- Added CWnd::GetNextDlgTabItem
- Added CWnd::GetSystemMenu
- Added CWnd::GetUpdateRect
- Added CWnd::GetUpdateRgn
- Added CWnd::HiliteMenuItem
- Added CWnd::IsDialogMessage
- Added CWnd::IsDlgButtonChecked
- Added CWnd::MapWindowPoints
- Added CWnd::Print
- Added CWnd::ScreenToClient
- Added CWnd::SendNotifyMessage
- Modified CDialog 				now takes a CWnd pointer instead of HWND
- Modified CResizer::AddChild	now takes a CWnd reference
- Modified CWnd::Create 		now takes a CWnd pointer instead of HWND
- Modified CWnd::CreateEx       now takes a CWnd pointer instead of HWND